--- a/CustomHTML5VideoPlayer/index.html
+++ b/CustomHTML5VideoPlayer/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <title>Custom HTML5 Video Player</title>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -17,6 +18,7 @@
       <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1"/>
       <button data-skip="-10" class="player__button"><< 10s</button>
       <button data-skip="25" class="player__button">25s >></button>
+      <button class="fullscreen__button toggle" title="Toggle Fullscreen"><i class="fa fa-arrows-alt"></i></button>
     </div>
   </div>
   <script src="video.js"></script>
